kubernetes/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
    - name: debug-container
      image: curlimages/curl
      command: [ "sleep", "3600" ]
