kubernetes/api-gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-depl
  annotations:
    netdata.io/enabled: "true"  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
      - name: api-gateway
        image: mariamghamgui/api-gateway:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: otel-agent
          mountPath: /otel-agent
        ports:
        - containerPort: 3000
      volumes:
      - name: otel-agent
        emptyDir: {}  

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-clusterip-srv
spec:
  selector:
    app: api-gateway
  type: ClusterIP  
  ports:
    - name: api-gateway
      protocol: TCP
      port: 3000
      targetPort: 3000
                
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-nodeport-srv
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: api-gateway
      port: 3000
      targetPort: 3000
      protocol: TCP
