kubernetes/frontend-application-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-application-depl
  annotations:
    netdata.io/enabled: "true"  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-application
  template:
    metadata:
      labels:
        app: frontend-application
    spec:
      containers:
        - name: frontend-application
          image: mariamghamgui/frontend-application:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-application-srv
spec:
  selector:
    app: frontend-application
  ports:
    - name: frontend-application
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
