kubernetes/quotes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes
  template:
    metadata:
      labels:
        app: quotes
    spec:
      containers:
        - name: quotes
          image: mariamghamgui/quotes:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: quotes-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: quotes
  ports:
    - name: quotes
      protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: quotes-nodeport-srv
spec:
  type: NodePort
  selector:
    app: quotes
  ports:
    - name: quotes
      port: 5000
      targetPort: 5000  
      protocol: TCP
